--- a/packages/web/frontend/public/index.html
+++ b/packages/web/frontend/public/index.html
@@ -1,5 +1,6 @@
 <html>
-  <body>
-    TEMP - TODO
+  <body style="background-color: rgb(13, 17, 23)">
+    <script>window.location="https://github.com/farkmarnum/thaas"</script>
   </body>
 </html>
+<!-- TODO -->
